[gd_scene load_steps=2 format=3 uid="uid://cxc68oowyep81"]

[ext_resource type="Script" path="res://prog122a.gd" id="1_bsscu"]

[node name="prog122a" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_bsscu")

[node name="ItemList" type="ItemList" parent="."]
layout_mode = 0
offset_right = 1153.0
offset_bottom = 397.0

[node name="calc" type="Button" parent="."]
layout_mode = 0
offset_left = 4.0
offset_top = 510.0
offset_right = 265.0
offset_bottom = 644.0
text = "calculate"

[node name="clear" type="Button" parent="."]
layout_mode = 0
offset_left = 419.0
offset_top = 517.0
offset_right = 680.0
offset_bottom = 651.0
text = "clear"

[node name="exit" type="Button" parent="."]
layout_mode = 0
offset_left = 886.0
offset_top = 515.0
offset_right = 1147.0
offset_bottom = 649.0
text = "exit"

[connection signal="pressed" from="calc" to="." method="_on_calc_pressed"]
[connection signal="pressed" from="clear" to="." method="_on_clear_pressed"]
[connection signal="pressed" from="exit" to="." method="_on_exit_pressed"]
